--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.7",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -20,7 +19,7 @@
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "postcss": "^8.5.3",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.2",
     "tailwindcss": "^4.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
